update validator messages
