# validator/api/v1/query_grpc.pb.go
@@ -19,14 +19,18 @@ import (
 const _ = grpc.SupportPackageIsVersion7
 
 const (
-	Query_Validator_FullMethodName  = "/chora.validator.v1.Query/Validator"
-	Query_Validators_FullMethodName = "/chora.validator.v1.Query/Validators"
+	Query_MaxMissedBlocks_FullMethodName = "/chora.validator.v1.Query/MaxMissedBlocks"
+	Query_Validator_FullMethodName       = "/chora.validator.v1.Query/Validator"
+	Query_Validators_FullMethodName      = "/chora.validator.v1.Query/Validators"
 )
 
 // QueryClient is the client API for Query service.
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type QueryClient interface {
+	// MaxMissedBlocks queries the maximum number of missed blocks before a
+	// validator is removed from the validator set.
+	MaxMissedBlocks(ctx context.Context, in *QueryMaxMissedBlocksRequest, opts ...grpc.CallOption) (*QueryMaxMissedBlocksResponse, error)
 	// Validator queries a validator by address.
 	Validator(ctx context.Context, in *QueryValidatorRequest, opts ...grpc.CallOption) (*QueryValidatorResponse, error)
 	// Validators queries all validators.
@@ -39,6 +43,15 @@ type queryClient struct {
 
 func NewQueryClient(cc grpc.ClientConnInterface) QueryClient {
 	return &queryClient{cc}
+}
+
+func (c *queryClient) MaxMissedBlocks(ctx context.Context, in *QueryMaxMissedBlocksRequest, opts ...grpc.CallOption) (*QueryMaxMissedBlocksResponse, error) {
+	out := new(QueryMaxMissedBlocksResponse)
+	err := c.cc.Invoke(ctx, Query_MaxMissedBlocks_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
 }
 
 func (c *queryClient) Validator(ctx context.Context, in *QueryValidatorRequest, opts ...grpc.CallOption) (*QueryValidatorResponse, error) {
@@ -63,6 +76,9 @@ func (c *queryClient) Validators(ctx context.Context, in *QueryValidatorsRequest
 // All implementations must embed UnimplementedQueryServer
 // for forward compatibility
 type QueryServer interface {
+	// MaxMissedBlocks queries the maximum number of missed blocks before a
+	// validator is removed from the validator set.
+	MaxMissedBlocks(context.Context, *QueryMaxMissedBlocksRequest) (*QueryMaxMissedBlocksResponse, error)
 	// Validator queries a validator by address.
 	Validator(context.Context, *QueryValidatorRequest) (*QueryValidatorResponse, error)
 	// Validators queries all validators.
@@ -74,6 +90,9 @@ type QueryServer interface {
 type UnimplementedQueryServer struct {
 }
 
+func (UnimplementedQueryServer) MaxMissedBlocks(context.Context, *QueryMaxMissedBlocksRequest) (*QueryMaxMissedBlocksResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method MaxMissedBlocks not implemented")
+}
 func (UnimplementedQueryServer) Validator(context.Context, *QueryValidatorRequest) (*QueryValidatorResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Validator not implemented")
 }
@@ -91,6 +110,24 @@ type UnsafeQueryServer interface {
 
 func RegisterQueryServer(s grpc.ServiceRegistrar, srv QueryServer) {
 	s.RegisterService(&Query_ServiceDesc, srv)
+}
+
+func _Query_MaxMissedBlocks_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(QueryMaxMissedBlocksRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(QueryServer).MaxMissedBlocks(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Query_MaxMissedBlocks_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(QueryServer).MaxMissedBlocks(ctx, req.(*QueryMaxMissedBlocksRequest))
+	}
+	return interceptor(ctx, in, info, handler)
 }
 
 func _Query_Validator_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
@@ -136,6 +173,10 @@ var Query_ServiceDesc = grpc.ServiceDesc{
 	ServiceName: "chora.validator.v1.Query",
 	HandlerType: (*QueryServer)(nil),
 	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "MaxMissedBlocks",
+			Handler:    _Query_MaxMissedBlocks_Handler,
+		},
 		{
 			MethodName: "Validator",
 			Handler:    _Query_Validator_Handler,
